--- a/nodeBlogWeb/index.html
+++ b/nodeBlogWeb/index.html
@@ -10,4 +10,7 @@
     <div id="root"></div>
     <script type="module" src="/src/public/main.jsx"></script>
   </body>
+<script>
+  const global = globalThis;
+</script>
 </html>
