--- a/YangBlogWeb/index.html
+++ b/YangBlogWeb/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/Y3.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="public/prism.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>YangBlog</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+<!--    <script type="module" src="public/prism.js"></script>-->
   </body>
 </html>
