--- a/YangWebBlog/index.html
+++ b/YangWebBlog/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Y3.svg" />
+    <link rel="stylesheet" href="public/prism.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YorenzBlog</title>
   </head>
