--- a/YangWebBlog/index.html
+++ b/YangWebBlog/index.html
@@ -3,18 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Y3.svg" />
-    <link rel="stylesheet" href="public/prism.css">
+    <link rel="stylesheet" href="/prism.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YorenzBlog</title>
   </head>
   <body>
     <div id="app"></div>
+    <div id="loader" class="center"></div>
+    <noscript>
+        <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
     <script type="module" src="/src/main.js"></script>
+    <script>
+        document.onreadystatechange = function() {
+            if (document.readyState !== "complete") {
+                document.querySelector(
+                    "body").style.visibility = "hidden";
+                document.querySelector(
+                    "#loader").style.visibility = "visible";
+            } else {
+                document.querySelector(
+                    "#loader").style.display = "none";
+                document.querySelector(
+                    "body").style.visibility = "visible";
+            }
+        };
+    </script>
   </body>
  <style>
      body {
          height: 100%;
          width: 100%;
+     }
+     #loader {
+         border: 12px solid #f3f3f3;
+         border-radius: 50%;
+         border-top: 12px solid #1adef6;
+         width: 70px;
+         height: 70px;
+         animation: spin 1s linear infinite;
+     }
+
+     @keyframes spin {
+         100% {
+             transform: rotate(360deg);
+         }
+     }
+     .center {
+         position: absolute;
+         top: 0;
+         bottom: 0;
+         left: 0;
+         right: 0;
+         margin: auto;
      }
  </style>
 </html>
