加载图案调整，时间轴尝试引入，增加smooth滑动与instant滑动区分

--- a/YangWebBlog/index.html
+++ b/YangWebBlog/index.html
@@ -32,12 +32,12 @@
          width: 100%;
      }
      #loader {
-         border: 12px solid #f3f3f3;
+         border: 5px solid #f3f3f3;
          border-radius: 50%;
-         border-top: 12px solid #1adef6;
+         border-top: 5px solid #1adef6;
          width: 70px;
          height: 70px;
-         animation: spin 1s linear infinite;
+         animation: spin 1.5s ease-out infinite;
      }
      ::-webkit-scrollbar {
        width: 6px;
