--- a/YangWebBlog/index.html
+++ b/YangWebBlog/index.html
@@ -14,6 +14,7 @@
         <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <script type="module" src="/src/main.js"></script>
+    <script src="/prism.js"></script>
     <script>
         document.onreadystatechange = function() {
             if (document.readyState !== "complete") {
